# pragma-miden

./: .gitignore  CHANGES.txt  Cargo.toml  DEPLOYMENT_STATUS.md  Dockerfile  FAUCET_ID_MAPPING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  TESTNET_DEPLOYMENT_GUIDE.md  check-local-node.sh  demo-2publishers.sh  demo-live-verbose.sh  demo-live.sh  demo-publishers.sh  entrypoint-init.sh  init-and-publish.sh  miden-client.toml  oracle-explorer.sh  pragma_miden.json  pyproject.toml  rust-toolchain.toml  store.sqlite3  verify-deployment-ready.sh
.cargo/: config.toml
.demo-workspaces/: ASSET_PAIRS_MAPPING.md
.demo-workspaces/oracle/: Cargo.toml  pragma_miden.json  test_median.sh
.demo-workspaces/publisher1/: Cargo.toml  pragma_miden.json  test_miden_client.py
.demo-workspaces/publisher2/: Cargo.toml  pragma_miden.json
.demo-workspaces/publisher3/: Cargo.toml  pragma_miden.json
.github/workflows/: build_and_test.yml  docker-build.yml  publish-pypi.yml  test.yml
accounts/oracle/: oracle.masm
crates/accounts/: Cargo.toml  GET_USD_MEDIAN.md
crates/accounts/src/: constants.rs  lib.rs  utils.rs
crates/accounts/src/oracle/: mod.rs  oracle.masm
crates/accounts/src/publisher/: mod.rs  publish_call.masm  publisher.masm
crates/accounts/src/registry/: registry.masm
crates/accounts/tests/: mod.rs  test_oracle.rs  test_publisher.rs
crates/accounts/tests/common/: mod.rs
crates/cli/: Cargo.toml
crates/cli/oracle/: Cargo.toml
crates/cli/oracle/src/: main.rs
crates/cli/oracle/src/commands/: entry.rs  get_entry.rs  init.rs  median.rs  median_batch.rs  mod.rs  publishers.rs  register_publisher.rs  remove_publisher.rs  sync.rs
crates/cli/publisher/: Cargo.toml  README.md  pragma_miden.json  pyproject.toml
crates/cli/publisher/src/: lib.rs  main.rs
crates/cli/publisher/src/commands/: entry.rs  get_entry.rs  init.rs  mod.rs  publish.rs  publish_batch.rs  sync.rs
crates/cli/publisher/tests/python/: publisher_1.py  publisher_2.py  test_publisher.py
crates/cli/src/: config.rs  errors.rs  lib.rs  main.rs
crates/cli/src/commands/: entry.rs  init.rs  median.rs  mod.rs  publish.rs  register.rs
crates/cli/utils/: Cargo.toml
crates/cli/utils/src/: cli.rs  client.rs  constants.rs  lib.rs  network.rs  storage.rs
crates/demo/: Cargo.toml  README.md
crates/demo/src/: README.md  bet.masm  constants.rs  core.rs  example.masm  faucet.rs  lib.rs  main.rs  operator.rs  utils.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  oracle.rs  test_end_to_end.rs  test_oracle.rs
crates/types/: Cargo.toml
crates/types/src/: currency.rs  entry.rs  faucet_entry.rs  faucet_id.rs  lib.rs  pair.rs
examples/consume-price/: Cargo.toml  README.md
examples/consume-price/src/: main.rs
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  externalSecret.yaml  ingress.yaml  service.yaml
local-node/: .gitignore  README.md  start.sh
oracle-explorer/: .env.example  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  instrumentation.ts  next.config.js  package.json  pnpm-lock.yaml  prices.db  prices.db-shm  prices.db-wal  tailwind.config.ts
oracle-explorer/app/: globals.css  layout.tsx  page.tsx
oracle-explorer/app/api/history/[pair]/: route.ts
oracle-explorer/app/api/history/seed/: route.ts
oracle-explorer/app/api/prices/: route.ts
oracle-explorer/components/: AssetCard.tsx  ChartModal.tsx  Footer.tsx  Header.tsx  PriceChart.tsx
oracle-explorer/lib/: api.ts  binance-api.ts  cache.ts  db-cleanup.ts  db-seed.ts  db.ts  faucet-config.ts
oracle-explorer/types/: asset.ts
oracle-explorer/workspace/: pragma_miden.json
src/: cli.rs  data.rs  lib.rs  main.rs  setup.rs  utils.rs
src/accounts/: accounts.rs  mod.rs  tests.rs
src/accounts/oracle/: oracle.inputs  oracle.masm  push_oracle.masm  read_oracle.masm
src/commands/: init.rs  mod.rs  new_oracle.rs  push_data.rs  read_data.rs  sync.rs
src/sdk/: mod.rs  sdk.rs
tests/: oracle.rs
