[workspace]
members = [
  "crates/types",
  "crates/accounts",
  "crates/cli/oracle",
  "crates/cli/publisher",
  "crates/cli/utils",
  "crates/demo",
]
resolver = "1"
default-members = [
  "crates/types",
  "crates/accounts",
  "crates/cli/oracle",
  "crates/cli/publisher",
  "crates/cli/utils",
  "crates/demo"
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
version = "0.1.0-alpha.1"
authors = ["Pragma <https://github.com/astraly-labs>"]
homepage = "https://www.pragma.build/"
edition = "2021"
repository = "https://github.com/astraly-labs/pragma-miden"
license = "MIT"

[workspace.dependencies]
pm-types = { path = "crates/types", default-features = false }
pm-accounts = { path = "crates/accounts", default-features = false }
pm-oracle-cli = { path = "crates/cli/oracle", default-features = false }
pm-publisher-cli = { path = "crates/cli/publisher", default-features = false }
pm-utils-cli = { path = "crates/cli/utils", default-features = false }
pm-demo = { path = "crates/demo", default-features = false }

anyhow = "1.0.93"
async-trait = "0.1.83"
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
lazy_static = "1.5.0"
clap = { version = "4.5.22", features = ["derive"] }
colored = "2.1.0"
thiserror = "1.0.61"
rusqlite = { version = "0.35" }
serde_json = "1.0.133"
serde = "1.0.215"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "net", "macros"] }
chrono = "0.4"
prettytable-rs = "0.10"
futures = "0.3.31"
miden-processor = "0.13.0"
miden-assembly = { version="0.14.0",default-features = false, features = [
  "testing", "std",
] }
miden-crypto = { version="0.14.0", default-features = false, features = ["executable"] }
miden-lib = {   git = "https://github.com/0xMiden/miden-base", branch = "next" , features = ["testing"] }
miden-objects = { version = "0.9.1" ,features = ["testing"]  }
miden-tx = {  git = "https://github.com/0xMiden/miden-base", branch = "next" ,features = ["async", "concurrent"] }
miden-client = { version="0.9.0", features=["tonic", "sqlite", "concurrent","testing"]}
pyo3 = { version = "0.20.0", features = ["extension-module",  "abi3-py37"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
