[workspace]
members = [
  "crates/types",
  "crates/accounts",
  "crates/cli/oracle",
  "crates/cli/publisher",
  "crates/cli/utils",
]
resolver = "1"
default-members = [
  "crates/types",
  "crates/accounts",
  "crates/cli/oracle",
  "crates/cli/publisher",
  "crates/cli/utils",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
version = "0.1.0-alpha.1"
authors = ["Pragma <https://github.com/astraly-labs>"]
homepage = "https://www.pragma.build/"
edition = "2021"
repository = "https://github.com/astraly-labs/pragma-miden"
license = "MIT"

[workspace.dependencies]
pm-types = { path = "crates/types", default-features = false }
pm-accounts = { path = "crates/accounts", default-features = false }
pm-oracle-cli = { path = "crates/cli/oracle", default-features = false }
pm-publisher-cli = { path = "crates/cli/publisher", default-features = false }
pm-utils-cli = { path = "crates/cli/utils", default-features = false }

anyhow = "1.0.93"
async-trait = "0.1.83"
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
lazy_static = "1.5.0"
clap = { version = "4.5.22", features = ["derive"] }
colored = "2.1.0"
thiserror = "1.0.61"
rusqlite = { version = "0.36" }
serde_json = "1.0.133"
serde = "1.0.215"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "net", "macros"] }
chrono = "0.4"
prettytable-rs = "0.10"
futures = "0.3.31"
# Miden 0.13 dependencies (new names)
miden-protocol = { version = "0.13", default-features = false }
miden-standards = { version = "0.13", default-features = false }
miden-assembly = "0.20"
miden-core = "0.20"
miden-core-lib = "0.20"
miden-crypto = "0.19"
miden-tx = { version = "0.13", features = ["concurrent"] }
miden-client = { version = "0.13", features = ["tonic", "testing"] }
miden-client-sqlite-store = "0.13"

# Legacy aliases for backward compatibility (will be removed after migration)
miden-lib = { package = "miden-standards", version = "0.13", default-features = false }
miden-objects = { package = "miden-protocol", version = "0.13", default-features = false }
pyo3 = { version = "0.20.0", features = ["extension-module",  "abi3-py37"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
