[package]
name = "pm-cli"
description = "Pragma-Miden cli for publishers"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
miden-crypto.workspace = true
clap.workspace = true
