[package]
name = "pm-publisher-cli"
description = "Pragma-Miden cli for publishers"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
miden-client.workspace = true
miden-tx.workspace = true
pm-accounts = "0.1.0-alpha.1"
pm-types = "0.1.0-alpha.1"
pm-utils-cli = "0.1.0-alpha.1"
prettytable-rs.workspace = true
rand.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tokio.workspace = true

