[package]
name = "pm-publisher-cli"
description = "Pragma-Miden cli for publishers"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "pm_publisher"
crate-type = ["cdylib"] 


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
miden-client.workspace = true
miden-tx.workspace = true
pm-accounts.workspace = true
pm-types.workspace = true
pm-utils-cli.workspace = true
prettytable-rs.workspace = true
rand.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tokio.workspace = true
miden-objects.workspace = true
pyo3.workspace = true

[build-dependencies]
pyo3-build-config = "0.20.0"
