[package]
name = "pm-utils-cli"
description = "Pragma-Miden utilities for the CLIs"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
pm-accounts.workspace = true
pm-types.workspace = true
clap.workspace = true
colored.workspace = true
thiserror.workspace = true
miden-client.workspace = true
miden-tx.workspace = true
rusqlite.workspace = true
rand.workspace = true
tokio.workspace = true
